2003-08-29  David Castelow  <DCastelow@Airspan.com>

	* strings/dec2base.m, strings/dec2bin.m, strings/dec2hex.m:
	Allow optional length argument.

2003-08-28  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* polynomial/polyfit.m: Avoid calling flipud.
	From Pascal A. Dupuis <Pascal.Dupuis@esat.kuleuven.ac.be>.
	Return structure as second output value for improved Matlab
	compatibility.

2003-07-30  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* linear-algebra/cond.m: Behave as though old built-in variable
	propagate_empty_matrices is always 1.  Also handle empty matrices
	with one non-zero dimension.

	* miscellaneous/dump_prefs.m: Add warn_separator_insert and
	warn_single_quote_string to the list.
	Delete whitespace_in_literal_matrix and propagate_empty_matrices
	from the list.

2003-07-25  Paul Kienzle <pkienzle@users.sf.net>

	* signal/autocov.m: Transpose result of conj because diag returns
	a column vector, not a row vector.

	* audio/playaudio.m, audio/record.m, image/image.m,
	miscellaneous/bug_report.m: Protect spaces in filenames
	with quotes.

2003-07-15  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* io/printf.m, io/puts.m: Delete.

	* miscellaneous/dump_prefs.m: Delete define_all_return_values and
	default_return_value from the list.
	Add warn_undefined_return_values to the list.
	

2003-07-13  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/dump_prefs.m: Delete default_global_variable_value
	and initialize_global_variables from the list.

2003-07-11  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* image/colormap.m: Don't save and restore default_eval_print_flag.

	* miscellaneous/dump_prefs.m: Delete default_eval_print_flag.

	* control/util/zgshsr.m: Use x OP= y instead of x = x OP y.
	* control/system/sys2fir.m: Likewise.

	* control/system/is_siso.m: Use && instead of & where appropriate.
	* control/system/__tf2sysl__.m: Likewise.

	* control/system/__tf2sysl__.m: Use end instead of length(X).
