@@ -1,3 +1,7 @@
+2003-09-08  Al Niessner  <Al.Niessner@jpl.nasa.gov>
+
+	* plot/subplot.m: New global variable, __multiplot_scale__.
+
 2003-08-29  David Castelow  <DCastelow@Airspan.com>
 
 	* strings/dec2base.m, strings/dec2bin.m, strings/dec2hex.m:
